# splat

./: .clang-format  CMakeLists.txt  Contributing.md  Makefile  README.md  README.simplify  README_VisualStudio.md  README_utils.md  splat.cpp
docs/english/: splat.man
src/: CMakeLists.txt  Makefile  anf.cpp  anf.h  antenna_pattern.cpp  antenna_pattern.h  boundary_file.cpp  boundary_file.h  city_file.cpp  city_file.h  dem.cpp  dem.h  elevation_map.cpp  elevation_map.h  fontdata.h  gnuplot.cpp  gnuplot.h  image.cpp  image.h  imagewriter.cpp  imagewriter.h  imagewriter.hpp  itwom3.0.cpp  itwom3.0.h  itwom3.0.old.cpp  json.cpp  json.h  kml.cpp  kml.h  lrp.cpp  lrp.h  main.cpp  miniz.h  pat_file.cpp  pat_file.h  path.cpp  path.h  ppm.h  region.cpp  region.h  (+19 more)
utils/: README.md
utils/splat-webmap/: map.html  splat.js
